// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders approved correctly 1`] = `
<ForwardRef(forwardRef)
  className="ModerateCard-root"
  data-testid="moderate-comment-card-comment-id"
  id="moderate-comment-comment-id"
  onClick={[Function]}
  tabIndex={0}
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <React.Fragment>
            <UsernameButton
              onClick={[Function]}
              username="Theon"
            />
            <Relay(CommentAuthorContainer)
              comment={Object {}}
            />
          </React.Fragment>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <div
        className="ModerateCard-contentArea"
      >
        <div
          className="ModerateCard-content"
        >
          <CommentContent
            highlight={false}
          >
            content
          </CommentContent>
          <Relay(MediaContainer)
            comment={Object {}}
          />
        </div>
        <div
          className="ModerateCard-viewContext"
        >
          <ForwardRef(forwardRef)
            iconLeft={true}
            onClick={[Function]}
            variant="text"
          >
            <ForwardRef(forwardRef)>
              question_answer
            </ForwardRef(forwardRef)>
            <Localized
              id="moderate-comment-viewConversation"
            >
              <span>
                View conversation
              </span>
            </Localized>
          </ForwardRef(forwardRef)>
        </div>
        <div
          className="ModerateCard-separator ModerateCard-ruledSeparator"
        />
      </div>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)
          spacing={3}
        >
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
        <ApproveButton
          className=""
          disabled={true}
          invert={true}
          onClick={[Function]}
          readOnly={false}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="ModerateCard-root"
  data-testid="moderate-comment-card-comment-id"
  id="moderate-comment-comment-id"
  onClick={[Function]}
  tabIndex={0}
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <React.Fragment>
            <UsernameButton
              onClick={[Function]}
              username="Theon"
            />
            <Relay(CommentAuthorContainer)
              comment={Object {}}
            />
          </React.Fragment>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <div
        className="ModerateCard-contentArea"
      >
        <div
          className="ModerateCard-content"
        >
          <CommentContent
            highlight={false}
          >
            content
          </CommentContent>
          <Relay(MediaContainer)
            comment={Object {}}
          />
        </div>
        <div
          className="ModerateCard-viewContext"
        >
          <ForwardRef(forwardRef)
            iconLeft={true}
            onClick={[Function]}
            variant="text"
          >
            <ForwardRef(forwardRef)>
              question_answer
            </ForwardRef(forwardRef)>
            <Localized
              id="moderate-comment-viewConversation"
            >
              <span>
                View conversation
              </span>
            </Localized>
          </ForwardRef(forwardRef)>
        </div>
        <div
          className="ModerateCard-separator ModerateCard-ruledSeparator"
        />
      </div>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)
          spacing={3}
        >
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
        <ApproveButton
          className=""
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`renders dangling correctly 1`] = `
<ForwardRef(forwardRef)
  className="ModerateCard-root ModerateCard-dangling"
  data-testid="moderate-comment-card-comment-id"
  id="moderate-comment-comment-id"
  onClick={[Function]}
  tabIndex={0}
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <React.Fragment>
            <UsernameButton
              onClick={[Function]}
              username="Theon"
            />
            <Relay(CommentAuthorContainer)
              comment={Object {}}
            />
          </React.Fragment>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <div
        className="ModerateCard-contentArea"
      >
        <div
          className="ModerateCard-content"
        >
          <CommentContent
            highlight={false}
          >
            content
          </CommentContent>
          <Relay(MediaContainer)
            comment={Object {}}
          />
        </div>
        <div
          className="ModerateCard-viewContext"
        >
          <ForwardRef(forwardRef)
            iconLeft={true}
            onClick={[Function]}
            variant="text"
          >
            <ForwardRef(forwardRef)>
              question_answer
            </ForwardRef(forwardRef)>
            <Localized
              id="moderate-comment-viewConversation"
            >
              <span>
                View conversation
              </span>
            </Localized>
          </ForwardRef(forwardRef)>
        </div>
        <div
          className="ModerateCard-separator ModerateCard-ruledSeparator"
        />
      </div>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)
          spacing={3}
        >
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          disabled={true}
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
        <ApproveButton
          className=""
          disabled={true}
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`renders rejected correctly 1`] = `
<ForwardRef(forwardRef)
  className="ModerateCard-root"
  data-testid="moderate-comment-card-comment-id"
  id="moderate-comment-comment-id"
  onClick={[Function]}
  tabIndex={0}
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <React.Fragment>
            <UsernameButton
              onClick={[Function]}
              username="Theon"
            />
            <Relay(CommentAuthorContainer)
              comment={Object {}}
            />
          </React.Fragment>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <div
        className="ModerateCard-contentArea"
      >
        <div
          className="ModerateCard-content"
        >
          <CommentContent
            highlight={false}
          >
            content
          </CommentContent>
          <Relay(MediaContainer)
            comment={Object {}}
          />
        </div>
        <div
          className="ModerateCard-viewContext"
        >
          <ForwardRef(forwardRef)
            iconLeft={true}
            onClick={[Function]}
            variant="text"
          >
            <ForwardRef(forwardRef)>
              question_answer
            </ForwardRef(forwardRef)>
            <Localized
              id="moderate-comment-viewConversation"
            >
              <span>
                View conversation
              </span>
            </Localized>
          </ForwardRef(forwardRef)>
        </div>
        <div
          className="ModerateCard-separator ModerateCard-ruledSeparator"
        />
      </div>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)
          spacing={3}
        >
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          disabled={true}
          invert={true}
          onClick={[Function]}
          readOnly={false}
        />
        <ApproveButton
          className=""
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`renders reply correctly 1`] = `
<ForwardRef(forwardRef)
  className="ModerateCard-root"
  data-testid="moderate-comment-card-comment-id"
  id="moderate-comment-comment-id"
  onClick={[Function]}
  tabIndex={0}
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <React.Fragment>
            <UsernameButton
              onClick={[Function]}
              username="Theon"
            />
            <Relay(CommentAuthorContainer)
              comment={Object {}}
            />
          </React.Fragment>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
        <InReplyTo
          onUsernameClick={[Function]}
        >
          Julian
        </InReplyTo>
      </div>
      <div
        className="ModerateCard-contentArea"
      >
        <div
          className="ModerateCard-content"
        >
          <CommentContent
            highlight={false}
          >
            content
          </CommentContent>
          <Relay(MediaContainer)
            comment={Object {}}
          />
        </div>
        <div
          className="ModerateCard-viewContext"
        >
          <ForwardRef(forwardRef)
            iconLeft={true}
            onClick={[Function]}
            variant="text"
          >
            <ForwardRef(forwardRef)>
              question_answer
            </ForwardRef(forwardRef)>
            <Localized
              id="moderate-comment-viewConversation"
            >
              <span>
                View conversation
              </span>
            </Localized>
          </ForwardRef(forwardRef)>
        </div>
        <div
          className="ModerateCard-separator ModerateCard-ruledSeparator"
        />
      </div>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)
          spacing={3}
        >
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
        <ApproveButton
          className=""
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`renders story info 1`] = `
<ForwardRef(forwardRef)
  className="ModerateCard-root"
  data-testid="moderate-comment-card-comment-id"
  id="moderate-comment-comment-id"
  onClick={[Function]}
  tabIndex={0}
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <React.Fragment>
            <UsernameButton
              onClick={[Function]}
              username="Theon"
            />
            <Relay(CommentAuthorContainer)
              comment={Object {}}
            />
          </React.Fragment>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <div
        className="ModerateCard-contentArea"
      >
        <div
          className="ModerateCard-content"
        >
          <CommentContent
            highlight={false}
          >
            content
          </CommentContent>
          <Relay(MediaContainer)
            comment={Object {}}
          />
        </div>
        <div
          className="ModerateCard-viewContext"
        >
          <ForwardRef(forwardRef)
            iconLeft={true}
            onClick={[Function]}
            variant="text"
          >
            <ForwardRef(forwardRef)>
              question_answer
            </ForwardRef(forwardRef)>
            <Localized
              id="moderate-comment-viewConversation"
            >
              <span>
                View conversation
              </span>
            </Localized>
          </ForwardRef(forwardRef)>
        </div>
        <div
          className="ModerateCard-separator ModerateCard-ruledSeparator"
        />
      </div>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)
          spacing={3}
        >
          <div
            data-testid="moderate-comment-storyInfo"
          >
            <div
              className="ModerateCard-storyLabel"
            >
              <Localized
                id="moderate-comment-storyLabel"
              >
                <span>
                  Comment on
                </span>
              </Localized>
              <span>
                :
              </span>
            </div>
            <div
              className="ModerateCard-commentOn"
            >
              <span
                className="ModerateCard-storyTitle"
              >
                Cancer cured!
              </span>
            </div>
            <div>
              <Localized
                id="moderate-comment-moderateStory"
              >
                <withPropsOnChange(TextLinkProps)
                  className="ModerateCard-link"
                  href="/story"
                  onClick={[Function]}
                >
                  Moderate Story
                </withPropsOnChange(TextLinkProps)>
              </Localized>
            </div>
          </div>
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
        <ApproveButton
          className=""
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`renders tombstoned when comment is deleted 1`] = `
<ForwardRef(forwardRef)
  className="ModerateCard-root ModerateCard-deleted"
  data-testid="moderate-comment-card-comment-id"
  id="moderate-comment-comment-id"
  onClick={[Function]}
  tabIndex={0}
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <React.Fragment>
            <UsernameButton
              onClick={[Function]}
              username="Theon"
            />
            <Relay(CommentAuthorContainer)
              comment={Object {}}
            />
          </React.Fragment>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={false}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <div
        className="ModerateCard-contentArea"
      >
        <div
          className="ModerateCard-content"
        >
          <CommentContent
            highlight={false}
          >
            <Localized
              id="moderate-comment-deleted-body"
            >
              <div
                className="ModerateCard-deleted"
              >
                This comment is no longer available. The commenter has deleted their account.
              </div>
            </Localized>
          </CommentContent>
          <Relay(MediaContainer)
            comment={Object {}}
          />
        </div>
        <div
          className="ModerateCard-viewContext"
        >
          <ForwardRef(forwardRef)
            iconLeft={true}
            onClick={[Function]}
            variant="text"
          >
            <ForwardRef(forwardRef)>
              question_answer
            </ForwardRef(forwardRef)>
            <Localized
              id="moderate-comment-viewConversation"
            >
              <span>
                View conversation
              </span>
            </Localized>
          </ForwardRef(forwardRef)>
        </div>
        <div
          className="ModerateCard-separator ModerateCard-ruledSeparator"
        />
      </div>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)
          spacing={3}
        >
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          disabled={true}
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
        <ApproveButton
          className=""
          disabled={true}
          invert={false}
          onClick={[Function]}
          readOnly={false}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;
